fixed alignment of pagination

--- a/src/app/components/base-filter-page/base-filter-page.styles.scss
+++ b/src/app/components/base-filter-page/base-filter-page.styles.scss
@@ -37,7 +37,7 @@
   .filter-tags {
 
     // we do this so the top of the filter tags aligns with the top 
-    margin-top: -10px;
+    margin-top: -7px;
 
     .filter-tag {
       &:first-child {
